syntax = "proto3";

import "graplinc/grapl/api/graph/v1beta1/types.proto";

package graplinc.grapl.api.graph.graph_mutation;



message Ok {}
message Err {}

message SetNodeRequest {
  v1beta1.IdentifiedNode node = 1;
}

message SetNodeSuccess {
}

message SetNodeResult {
  oneof rpc_result {
    SetNodeSuccess set = 1;
    Err predicate_does_not_exist = 2;
    Err predicate_type_mismatch = 3;
  }
}

message SetEdgeRequest {
  v1beta1.IdentifiedEdge edge = 1;
}

message SetEdgeSuccess {
}

message SetEdgeResult {
  oneof rpc_result {
    SetEdgeSuccess set = 1;
    SetEdgeSuccess negated = 2;
    Err edge_does_not_exist = 3;
    Err edge_type_mismatch = 4;
  }
}

message CreateNodeRequest {
  string node_type = 1;
}

message CreateNodeSuccess {
  uint64 uid = 1;
}

message CreateNodeResult {
  oneof rpc_result {
    CreateNodeSuccess created = 1;
  }
}

service GraphMutationRpc {
  rpc CreateNode(CreateNodeRequest) returns (CreateNodeResult) {}
  rpc SetNode(SetNodeRequest) returns (SetNodeResult) {}
  rpc SetEdge(SetEdgeRequest) returns (SetEdgeResult) {}
}
